fix: 기존 브라우저 상태바가 네비바를 가리는 문제 overflow를 사용해서 해결

--- a/common/styles/style.css
+++ b/common/styles/style.css
@@ -321,6 +321,7 @@ input {
 
     body {
         flex-direction: column;
+        overflow: auto;
     }
 
     /* Index */
